--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    :root {
+        --color-accent: var(--color-zinc-800);
+        --color-accent-content: var(--color-zinc-800);
+        --color-accent-foreground: var(--color-white);
+    }
+
+    .dark {
+        --color-accent: var(--color-white);
+        --color-accent-content: var(--color-white);
+        --color-accent-foreground: var(--color-zinc-800);
+    }
+}
+
+
+
+.\[\&\>\[data-flux-label\]\]\:mb-3>[data-flux-label] {
+    margin-bottom: 0.5rem !important;
+}
+
+input:focus[data-flux-control],
+textarea:focus[data-flux-control],
+select:focus[data-flux-control] {
+    outline-color: var(--color-accent);
+}
