Adding more pages to livewire starter kit along with dashboard/layout

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -25,5 +25,5 @@
 input:focus[data-flux-control],
 textarea:focus[data-flux-control],
 select:focus[data-flux-control] {
-    outline-color: var(--color-accent);
+    @apply ring-2 ring-offset-2 ring-offset-accent-foreground ring-accent outline-none;
 }
