Adding fixes to the login/register pages to allow registration

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -27,3 +27,7 @@ textarea:focus[data-flux-control],
 select:focus[data-flux-control] {
     @apply ring-2 ring-offset-2 ring-offset-accent-foreground ring-accent outline-none;
 }
+
+/* \[:where(&)\]:size-4 {
+    @apply size-4;
+} */
