Adding more content to livewire starter kit

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,22 +4,25 @@
 
 @layer base {
     :root {
-        --color-accent: var(--color-zinc-800);
-        --color-accent-content: var(--color-zinc-800);
+        --color-accent: var(--color-neutral-800);
+        --color-accent-content: var(--color-neutral-800);
         --color-accent-foreground: var(--color-white);
     }
 
     .dark {
         --color-accent: var(--color-white);
         --color-accent-content: var(--color-white);
-        --color-accent-foreground: var(--color-zinc-800);
+        --color-accent-foreground: var(--color-neutral-800);
     }
 }
 
 
+[data-flux-field] {
+    @apply grid gap-2;
+}
 
-.\[\&\>\[data-flux-label\]\]\:mb-3>[data-flux-label] {
-    margin-bottom: 0.5rem !important;
+[data-flux-label] {
+    @apply  !mb-0 !leading-tight;
 }
 
 input:focus[data-flux-control],
